--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
   "author": "Nick Ooms <oomsni@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "ansi-styles": "^3.0.0",
     "body-parser": "^1.16.0",
     "canvas": "^1.6.2",
+    "chalk": "^1.1.3",
     "compression": "^1.5.2",
     "config": "^1.24.0",
     "cors": "^2.7.1",
@@ -49,12 +51,12 @@
     "fmt-obj": "^1.1.1",
     "htmlparser2": "^3.9.2",
     "mongoose": "^4.7.7",
+    "morgan": "^1.8.0",
     "node-cache": "^4.1.1",
     "node-fetch": "^1.6.3",
     "persistent-cache": "^1.1.1",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
-    "morgan": "^1.8.0",
     "resource-router-middleware": "^0.6.0"
   },
   "devDependencies": {
