--- a/package.json
+++ b/package.json
@@ -64,13 +64,19 @@
     "node-cache": "^4.1.1",
     "node-fetch": "^1.6.3",
     "persistent-cache": "^1.1.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react-router-redux": "^4.0.8",
     "react-swipeable-views": "^0.11.1",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "resource-router-middleware": "^0.6.0",
-    "xml2js": "^0.4.17"
+    "xml2js": "^0.4.17",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
