--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "babel-server": "nodemon --exec npm run babel-node -- server.js",
     "test": "mocha --timeout 10000",
     "test-eslint": "npm run eslint && npm test",
-    "babel-node": ".\\node_modules\\.bin\\babel-node --ignore='cache'"
+    "babel-node": ".\\node_modules\\.bin\\babel-node --ignore='cache'",
+    "flow": "flow"
   },
   "eslintConfig": {
     "extends": "airbnb",
@@ -57,30 +58,33 @@
     "express": "^4.13.3",
     "fmt-obj": "^1.1.1",
     "htmlparser2": "^3.9.2",
+    "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.17.1",
     "mongoose": "^4.7.7",
     "mongoose-geojson-schema": "^2.1.2",
     "morgan": "^1.8.0",
     "node-cache": "^4.1.1",
-    "node-fetch": "^1.6.3",
     "persistent-cache": "^1.1.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "react-swipeable-views": "^0.11.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-offline": "^1.0.3",
     "redux-thunk": "^2.2.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "resource-router-middleware": "^0.6.0",
-    "xml2js": "^0.4.17",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
-    "react-router": "^3.0.2"
+    "whs": "^2.0.0-beta.8",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
+    "babel-eslint": "^6.1.2",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.1.11",
@@ -89,11 +93,12 @@
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "eslint": "^3.1.1",
+    "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
+    "flow-bin": "^0.42.0",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
     "react-scripts": "0.9.5"
